--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,6 +3,7 @@
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <title>Hello</title>
+<link rel="stylesheet" type="text/css" href="ninngenn-te-iiinaaa.css">
 </head>
 <body>
 <%- body %>
