--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,6 +4,8 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <title>Hello</title>
 <link rel="stylesheet" type="text/css" href="ninngenn-te-iiinaaa.css">
+<script type="text/javascript" src="jquery-1.6.2.js"></script>
+<!--[if lt IE 9]><script type="text/javascript" src="excanvas.compiled.js"></script><![endif]-->
 </head>
 <body>
 <%- body %>
