basic drawing with canvasdrawing plugin

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,8 @@
-hello waarudo
+<div id="sketch-pad-wrap" class="center">
+<canvas id="sketch-pad" width="500" height="350">Please use Google Chrome, Firefox, or Internet Explorer 9</canvas>
+</div>
+<script type="text/javascript">
+$(document).ready(function(){
+  new CanvasDrawing("sketch-pad");
+});
+</script>
