--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -6,6 +6,7 @@
 <link rel="stylesheet" type="text/css" href="ninngenn-te-iiinaaa.css">
 <script type="text/javascript" src="jquery-1.6.2.js"></script>
 <!--[if lt IE 9]><script type="text/javascript" src="excanvas.compiled.js"></script><![endif]-->
+<script type="text/javascript" src="canvasdrawing.js"></script>
 </head>
 <body>
 <%- body %>
