--- a/static/ninngenn-te-iiinaaa.css
+++ b/static/ninngenn-te-iiinaaa.css
@@ -1,10 +1,3 @@
-
-
-
-
-
-
-
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -53,3 +46,9 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+.align-center{text-align:center}
+.center{margin:0 auto}
+
+#sketch-pad-wrap{width:500px;margin-top:15px}
+#sketch-pad{cursor:crosshair;border:1px solid #ccc;}
