--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,6 +5,8 @@
 <title>Hello</title>
 <link rel="stylesheet" type="text/css" href="ninngenn-te-iiinaaa.css">
 <script type="text/javascript" src="jquery-1.6.2.js"></script>
+<script type="text/javascript" src="underscore.js"></script>
+<script type="text/javascript" src="ICanHaz.js"></script>
 <!--[if lt IE 9]><script type="text/javascript" src="excanvas.compiled.js"></script><![endif]-->
 <script type="text/javascript" src="canvasdrawing.js"></script>
 </head>
