--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@ var canvas_thing;
 var current_color = '#000000';
 
 $(document).ready(function(){
-  canvas_thing = new CanvasDrawing("sketch-pad", {color: "#"+current_color});
+  canvas_thing = new CanvasDrawing("sketch-pad", {color: current_color});
   init_color_picker();
   
 });
