--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,8 +3,10 @@
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <title>Hello</title>
+<link rel="stylesheet" type="text/css" href="jquery-ui-1.8.16.custom.css">
 <link rel="stylesheet" type="text/css" href="ninngenn-te-iiinaaa.css">
 <script type="text/javascript" src="jquery-1.6.2.js"></script>
+<script type="text/javascript" src="jquery-ui-1.8.16.custom.min.js"></script>
 <script type="text/javascript" src="underscore.js"></script>
 <script type="text/javascript" src="ICanHaz.js"></script>
 <!--[if lt IE 9]><script type="text/javascript" src="excanvas.compiled.js"></script><![endif]-->
