--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -11,6 +11,8 @@
 <script type="text/javascript" src="ICanHaz.js"></script>
 <!--[if lt IE 9]><script type="text/javascript" src="excanvas.compiled.js"></script><![endif]-->
 <script type="text/javascript" src="canvasdrawing.js"></script>
+<script type="text/javascript" src="base64.js"></script>
+<script type="text/javascript" src="canvas2image.js"></script>
 </head>
 <body>
 <%- body %>
