--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-<title>Hello</title>
+<title>Runaway Doodle</title>
 <link rel="stylesheet" type="text/css" href="jquery-ui-1.8.16.custom.css">
 <link rel="stylesheet" type="text/css" href="ninngenn-te-iiinaaa.css">
 <script type="text/javascript" src="jquery-1.6.2.js"></script>
