--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,3 @@
-
 <div id="sketch-pad-wrap" class="center">
 <span style="float:left">Draw a picture based on these words:</span><br>
 <div id="phrase" class="bold black" style="float:left"></div>
@@ -95,11 +94,14 @@ function updateTimer(){
 };
 
 function doneDoodle(){
-  
-//  if (){
+  var answer = confirm("Save your doodle in the online gallery?");  
+  if (answer){
     //send_img_to_db();
-//  }
-   
+    alert("Doodle saved in our archives.");
+  }
+  else{
+    alert("Doodle was not saved.");
+  }
 };
 
 function genNewWords(){
