asks for username, added link at bottom, & stylistic changes

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,6 +14,7 @@
 
 <div class="clear"></div><br>
 <span style="float:left">Time left:&nbsp </span><div id="timer" style="float:left"></div>&nbsp s
+<br><br><a href="/">View the doodle gallery.</a>
 </div>
 
 <!-- TEMPLATES -->
@@ -98,20 +99,19 @@ function doneDoodle(){
 
   var answer = confirm("Save your doodle in the online gallery?");  
   if (answer){
+    var name = prompt("Enter your name:","Guest");
     //send_img_to_db();
     alert("Doodle saved in our archives.");
-    //we need to redirect to gallery page here
   }
   else{
     alert("Doodle was not saved.");
+  }
+
     var answer2 = confirm("Doodle again?");
     if (answer2){
-      genNewWords();
+      genNewWords();   
     }
-    else{
-      clearInterval(t42);
-    }
-  }
+
 };
 
 function genNewWords(){
