--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -14,7 +14,10 @@
 <script type="text/javascript" src="base64.js"></script>
 <script type="text/javascript" src="canvas2image.js"></script>
 </head>
-<body>
-<%- body %>
+<body class="align-center">
+  <div class="center wrap align-right"><a href="/">Draw!</a> &middot; <a href="/latest">Latest doodles</a></div>
+  <div id="main-wrap" class="center wrap align-left border-radius">
+    <%- body %>
+  <div>
 </body>
 </html>
