--- a/static/ninngenn-te-iiinaaa.css
+++ b/static/ninngenn-te-iiinaaa.css
@@ -47,14 +47,18 @@ table {
 	border-spacing: 0;
 }
 
-body{font:100% arial}
+body{font:100% arial;background:#fff}
+a{color:#08d;text-decoration:none}a:hover{text-decoration:underline}
+.wrap{width:600px;padding:20px 25px}
+#main-wrap{background:#eee;;border:1px solid #ccc}
 
-.align-center{text-align:center}.align-right{text-align:right}
+.border-radius{border-radius:3px;-moz-border-radius:3px}
+.align-left{text-align:left}.align-center{text-align:center}.align-right{text-align:right}
 .center{margin:0 auto}
 .left{float:left}.right{float:right}
-.bold{font-weight:700}
+b,.bold{font-weight:700}
 .grey{color:#777}.black{color:#000}
-.small{font-size:13px}.medium{font-size:15px}
+.small{font-size:11px}.medium{font-size:15px}
 .clear{clear:both;display:block;overflow:hidden;visibility:hidden;width:0;height:0}
 
 #sketch-pad-wrap{width:500px;margin-top:15px}
@@ -67,3 +71,7 @@ body{font:100% arial}
 
 #size-slider-wrap{width:55%}
 #size-slider{width:60%;margin-left:15px}
+
+#metadata{padding-bottom:10px}
+#image-list .li-lol{margin-bottom:15px;width:200px}
+#image-list img{margin-top:6px}
