--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
 </div>
 <div class="clear"></div>
 <div id="options" class="align-center small">
-Finished early?<br><button id="done-early" class="">I'm Done Drawing</button>
+Finished early?<br><button id="done-early" class="">I'm Done Doodling</button>
 </div>
 </div>
 
