--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -6,6 +6,7 @@
 <link rel="stylesheet" type="text/css" href="reset.css">
 <link rel="stylesheet" type="text/css" href="jquery-ui-1.8.16.custom.css">
 <link rel="stylesheet" type="text/css" href="/facebox/facebox.css">
+<link href='http://fonts.googleapis.com/css?family=Delius+Swash+Caps' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" type="text/css" href="ninngenn-te-iiinaaa.css">
 <script type="text/javascript" src="jquery-1.6.2.js"></script>
 <script type="text/javascript" src="jquery-ui-1.8.16.custom.min.js"></script>
@@ -18,7 +19,11 @@
 <script type="text/javascript" src="canvas2image.js"></script>
 </head>
 <body class="align-center">
-  <div class="center wrap align-right"><a href="/">Draw!</a> &middot; <a href="/latest">Latest doodles</a></div>
+  <div id="header" class="center wrap-nopad">
+    <h1 id="logo" class="left">Runaway Doodle</h1>
+    <div id="nav" class="right"><a href="/">Doodle!</a> &middot; <a href="/latest">Latest doodles</a></div>
+    <div class="clear"></div>
+  </div>
   <div id="main-wrap" class="center wrap align-left border-radius">
     <%- body %>
   <div>
