--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -17,10 +17,21 @@
 <script type="text/javascript" src="canvasdrawing.js"></script>
 <script type="text/javascript" src="base64.js"></script>
 <script type="text/javascript" src="canvas2image.js"></script>
+<script type="text/javascript">
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-25398222-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+</script>
 </head>
 <body class="align-center">
   <div id="header" class="center wrap-nopad">
-    <h1 id="logo" class="left">Runaway Doodle</h1>
+    <h1 id="logo" class="left"><a class="black no-underline" href="/">Runaway Doodle</a></h1>
     <div id="nav" class="right"><a href="/">Doodle!</a> &middot; <a href="/latest">Latest doodles</a></div>
     <div class="clear"></div>
   </div>
