share link + styles

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -38,5 +38,10 @@
   <div id="main-wrap" class="center wrap align-left border-radius">
     <%- body %>
   <div>
+<script type="text/javascript">
+$(".highlight-on-focus").click(function(){
+  $(this).focus().select();
+});
+</script>
 </body>
 </html>
