--- a/views/list.ejs
+++ b/views/list.ejs
@@ -7,7 +7,7 @@
   <li class="li-lol left small grey">
   <b><a href="/<%= image.id %>"><%= image.phrase %></a></b><br>
   by <span class="black"><%= image.name %></span><br>
-  <a href="/<%= image.id %>"><img width="180" src="<%= image.data %>" alt="<%= image.phrase %>"></a>
+  <a href="/<%= image.id %>"><img width="180" class="doodle-img" src="<%= image.data %>" alt="<%= image.phrase %>"></a>
   </li>
   <% index ++; %>
 <% }); %>
