--- a/static/ninngenn-te-iiinaaa.css
+++ b/static/ninngenn-te-iiinaaa.css
@@ -24,7 +24,8 @@ b,.bold{font-weight:700}
 #nav{padding-top:6px}
 
 #sketch-pad-wrap{width:500px;margin-top:15px}
-#sketch-pad{cursor:crosshair;border:1px solid #ccc;}
+#sketch-pad{cursor:crosshair}
+#sketch-pad,.doodle-img{border:1px solid #ccc}
 
 #sketch-options{margin:10px 0}
 
@@ -40,6 +41,7 @@ b,.bold{font-weight:700}
 #metadata{padding-bottom:10px}
 #image-list .li-lol{margin-bottom:15px;width:200px}
 #image-list img{margin-top:6px}
+#share-link{width:65%}
 
 #time-up-play-again{margin:15px 0;}
 #save-doodle{margin:20px 10px 10px;padding:10px;background:#eee;border:1px solid #ccc}
