--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -32,7 +32,7 @@
 <body class="align-center">
   <div id="header" class="center wrap-nopad">
     <h1 id="logo" class="left"><a class="black no-underline" href="/">Runaway Doodle</a></h1>
-    <div id="nav" class="right"><a href="/">Doodle!</a> &middot; <a href="/latest">Latest doodles</a></div>
+    <div id="nav" class="right"><a href="/">Doodle!</a> &middot; <a href="/latest">Gallery</a></div>
     <div class="clear"></div>
   </div>
   <div id="main-wrap" class="center wrap align-left border-radius">
